fix: css alignment and width

--- a/blocks/pdf-viewer/pdf-viewer.css
+++ b/blocks/pdf-viewer/pdf-viewer.css
@@ -8,4 +8,5 @@
     max-height: 800px;
     max-width: 1200px;
     border: 1px solid var(--mt-global-color-gallery);
+    margin: 0 auto;
 }
